<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_background"
    android:orientation="horizontal"
    android:padding="@dimen/padding_list_item"
    android:weightSum="1"
    android:id="@+id/ll_list_item"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/name_repository"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/my_app_color_title_item_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description_repository"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:maxLines="3"
            android:text="@string/description_repository"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/my_app_color_description_item_color"
            app:layout_constraintLeft_toLeftOf="@+id/tv_name_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_repository" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/tv_description_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_repository">

            <ImageView
                android:id="@+id/iv_fork"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_fork" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_number_fork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/number_fork"
                android:textColor="@color/my_app_color_description_item_color"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_star" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_number_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/number_star"
                android:textColor="@color/my_app_color_description_item_color"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_user_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_avatar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/username"
            android:textColor="@color/my_app_color_title_item_color"
            android:textSize="@dimen/username"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>